# diffgrab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json
diffgrab/: __init__.py  __main__.py  db.py  differ.py  mcp_server.py  tracker.py  visual.py
tests/: test_db.py  test_differ.py  test_tracker.py  test_visual.py
